@@ -1,4 +1,4 @@
 (defpackage :launchpad
     (:use :cl :drakma :cl-ppcre :json)
-    (:export :get-token-and-login :get-all-bugs :open-a-bug))
+    (:export :get-token-and-login :get-all-bugs :open-a-bug :update-a-bug))
   
